test/cases/compile_errors/non_packed_struct_backing.zig
const T = struct(u8) {};
// error
//
// :1:18: error: non-packed struct does not support backing integer type
